--- a/Code/style.css
+++ b/Code/style.css
@@ -16,10 +16,11 @@ body{
     background-color: white;
 }
 
-.hero-image{
+.hero{
     margin: auto;
     padding: 0 2px 0 2px;
 }
+
 h1{
     margin-top: 0;
     margin-bottom: 0;
