--- a/Code/style.css
+++ b/Code/style.css
@@ -11,36 +11,49 @@
 
 */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body{
+body {
     height: 100vh;
+    display: flex;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,1) 23%, rgba(244,174,154,0.9668461134453782) 40%, rgba(230,78,36,0.9416360294117647) 58%, rgba(202,52,10,0.894016981792717) 76%);
 }
 
-#game-board {
-    width: 1000px;
-    height: 1000px;
+/* This is the styles for the Game Board and Elements within*/
+
+/* Game Board */
+.game-board {
+    width: 800px;
+    height: 800px;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid #AD343E;
 }
-.memory-card{
-    width: 20%;
-    height: 25%;
+/* Card Styles */
+.memory-card {
+    width: calc(20% - 15px);
+    height: calc(25% - 10px);
+    margin: 5px;
     position: relative;
-    border: 2px solid yellow;
+    transform: scale(1);
 }
-
 .front-face,
 .back-face {
-    position:absolute;
-    border: 2px solid black;
     width: 100%;
     height: 100%;
+    padding: 10px;
+    position: absolute;
+    border-radius: 8px;
+    background-color: black;
 }
+
+/* Click animation */
+.memory-card:active {
+    transform: scale(.97);
+    transition: transform .2s;
+}
+
