--- a/Code/style.css
+++ b/Code/style.css
@@ -8,7 +8,6 @@
     F0A6CA -- Chopper's Pink
     A997DF -- Robin's Purple
     86BBD8 -- Franky's Light Blue
-
 */
 
 * {
@@ -40,6 +39,18 @@ h1{
     color: #ffd00d;
     margin-top: 10px;
     text-shadow: 2px 2px #ad343e
+}
+
+aside {
+    margin-top: 20px;
+    
+}
+
+aside div{
+    color: white;
+    display: inline-block;
+    padding: 10px;
+    padding-bottom: 0;
 }
 
 
