--- a/Code/style.css
+++ b/Code/style.css
@@ -77,7 +77,7 @@ aside div{
     margin: 5px;
     position: relative;
     /* transform sets intitial scale to 1, transform-style: preserve-3d allows for 3D transformations, transition to animate transform property */
-    transform: scale(1);
+    transform: scale(1), rotateY(0deg);
     transform-style: preserve-3d; 
     transition: transform .5s;
 }
@@ -108,7 +108,13 @@ aside div{
     transition: transform .2s;
 }
 
+.memory-card.flip.flip-delay {
+    /*transform: rotateY(180deg);*/
+    transition-delay: .5s;
+}
+
 .memory-card.flip {
     /* reveals back-face */
-    transform: rotateY(180deg)
+    transform: rotateY(180deg);
 }
+
