--- a/style.css
+++ b/style.css
@@ -41,6 +41,44 @@ h1{
     text-shadow: 2px 2px #ad343e;
 }
 
+.overlay-text{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+button{
+    font-size: 80%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #ffd00d;
+    text-shadow: 3px 3px #ad343e;
+    background-color: rgba(0, 0, 0, 0.95);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.overlay-text.visible {
+    display: flex;
+    animation: overlay-grow 500ms forwards;
+}
+
+@keyframes overlay-grow{
+    from{
+        background-color: rgba(0, 0, 0, 0);
+        font-size: 0;
+    }
+    to{
+        background-color: rgba(0, 0, 0, 0.95);
+        font-size: 10em;
+    }
+}
+
 aside {
     margin-top: 40px;
 }
