inputted variables and completed nesting

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -8,3 +8,4 @@ $div-text-shadow: #86BBD8;
 $game-status: aliceblue;
 $btnOverlay-BLK: rgba(0, 0, 0, 0.95);
 $btnOverlay-WHT: rgba(0, 0, 0, 0);
+$logo-img: url('https://w0.peakpx.com/wallpaper/121/94/HD-wallpaper-one-piece-one-piece-anime.jpg');
