--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -6,6 +6,8 @@ $red-color: #ad343e;
 $black-color: black;
 $div-text-shadow: #86BBD8;
 $game-status: aliceblue;
+$gameboard-W: 900px;
+$gameboard-H: 900px;
 $btnOverlay-BLK: rgba(0, 0, 0, 0.95);
 $btnOverlay-WHT: rgba(0, 0, 0, 0);
 $logo-img: url('https://w0.peakpx.com/wallpaper/121/94/HD-wallpaper-one-piece-one-piece-anime.jpg');
